--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -245,7 +245,7 @@ figure.especial
   transform: translateY(-50%) rotate(0deg)
   left: -45px
 .slyder-a__tipo-a .slyder-a__bullets
-  bottom: 0px
+  bottom: -30px
 .slyder-a__bullets__item
   margin: 0 6px
 
@@ -260,3 +260,7 @@ figure.especial
 .bg
   &-c1
     background-color: #D9FAFE
+
+.txt
+  &-c1
+    color: #3cb1be
